--- a/gb/24/11/6/n14365676.md
+++ b/gb/24/11/6/n14365676.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>壮志未酬因公殉职 故警苏昱鸿获颁总统褒扬令</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/11/id14365677-721796-600x400.jpg" />
-<h6>局长翁群能(右)转颁褒扬令。（基隆市警察局提供）
-</h6>
+<h6>局长翁群能(右)转颁褒扬令。（基隆市警察局提供）</h6>
 <hr>
 <p>【大纪元2024年11月06日讯】（大纪元记者陈秀媛台湾基隆报导）今（2024）年2月29日基隆市警察局第三分局八堵分驻所24岁警员苏昱鸿，遭偷车简姓男子开车冲撞派出所值班台，苏员甫于2023年警专40期毕业，认真执勤遭受暴力致死，不幸因公殉职，经内政部呈请总统明令褒扬。</p>
 <p>今（6）日基隆市警察局局长翁群能于亲率该局人事室主任、第三分局分局长等人，至故警苏昱鸿家中转颁致送总统褒扬令，表彰其为国家社会的卓越贡献与奋斗不懈的无畏精神，由故警苏员父母及妹妹一同代表接受，过程庄严隆重。</p>
@@ -12,40 +11,33 @@
 <p>有关警察人员因公伤亡慰问金发给办法业经行政院2024年9月4日修正公布，调增员警执行勤务遭受暴力或意外危害致死亡或殉职者，发给其遗族慰问金由新台币1,200万元至1,400万元提高至2,000万元，修正施行前，已符合发生时发给慰问金条件，尚未申请之案件，得依修正施行后规定办理，故苏昱鸿案符合本修正要件，基隆市警察局依修正新法协助家属申请，并经内政部警政署10月21日核准发给2,000万元在案，给予遗族更妥当之照护。◇</p>
 <p>责任编辑：唐音</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/27/n14190463.md#1">身障律师陈俊翰告别式 蔡英文颁褒扬令感谢对台贡献</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/1/n14192258.md#1">省府颁褒扬信  表彰2023年度优秀护理者</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281034.md#1">赖总统颁褒扬令 表彰殉职海虎军舰3官兵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/15/n14291031.md#1">基隆警值班台遭撞亡 未认定“因公殉职”引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/16/n14291797.md#1">遭冲撞员警非因公殉职 谢国梁拟拜会警政署长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/19/n14294292.md#1">警遭撞身亡是因公死亡？因公殉职? 警政署将放宽认定</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365639.md#1">共同打造有爱城市 基隆表扬安乐信义区里邻长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364898.md#1">型塑停让文化 基隆11月起“行人有序”宣导</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364700.md#1">基隆关吁配合双11跨境网购热潮 提升通关效率</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/5/n14364250.md#1">台东“艺起来我家”活动 获日本优良设计奖</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/3/n10020053.md#1" target="_blank">对知识份子的迫害——思想改造运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/2/24/n3807816.md#1" target="_blank">飞瀑：迫害法轮功 中共偷偷摸摸作恶何其多？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/29/n11148760.md#1" target="_blank">林辉：抗战时毒杀日外交官 英雄难逃中共毒手</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781764.md#1">太后临终前 竟让皇帝不要把皇位传给儿子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360732.md#1">墨西哥南部丛林发现失落的玛雅古城</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/9/n12607219.md#1">【元曲大家】散曲第一人马致远</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359080.md#1">美国9岁女孩突然描述前世生活 父母惊呆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357439.md#1">【未解之谜】神奇的铁板神算 倪匡亲证命中率100%！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14361994.md#1">【唐青看时事】口水战是烟幕弹 济世安民才是王道</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356485.md#1">【环球直击】Temu涉贩售非法商品 欧盟立案调查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/23/n14356486.md#1">【中国禁闻】政治局会议现异常 习地位不稳？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14359949.md#1">抓拍梦幻般孔雀照 9岁童获世界级摄影大奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360702.md#1">【更新】台风康芮袭台 31日全台停班课一览</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360436.md#1">投资2亿 刘德华《焚城》点映首日票房仅34万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360347.md#1">45岁邓超头发胡子全白 侧脸神似周星驰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14361071.md#1">夫妻双双入围青龙奖 汤唯晒与导演夫甜蜜合照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360398.md#1">梁朝伟东京影展简短致词 惊慌离场网友笑翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14361136.md#1">宋慧乔出席友人婚礼 拍照时将爱马仕包放地上</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361417.md#1">廉价航空公司的机票为何能卖那么便宜？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360606.md#1">为什么人们爱看恐怖片吓自己？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357571.md#1">夜尿超困扰！2动作可改善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351750.md#1">你应该了解 不用电有哪些煮饭方式与技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360174.md#1">52年研究显示 吃鸡蛋可改善女性记忆力</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/31/n10101444.md#1">腊月十六为何盛大作尾牙 祭土地公迎财还迎接什么？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686592.md#1">人物写实油画大赛入围作品欣赏——《深渊边缘》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14686851.md#1">立春节气要“养生”做这些事增长一年阳气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689662.md#1">【唐青看时事】英加押宝中共 与虎谋皮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689644.md#1">【思想领袖】你真的生病吗？药物恐惧行销真相</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689641.md#1">【直播】肯尼迪和奥兹博士探讨心理健康倡议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688447.md#1">Costco推出Nike联名款运动鞋 转售价格飙涨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688660.md#1">金价大跳水 大陆投资者经历从赚5万到倒贴4万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688457.md#1">印度学者：张又侠落马直接影响中共21大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689262.md#1">知名女歌手于文文贵州演唱会上晕倒送医</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688468.md#1">李嘉明晒片酬 自曝发视频吐槽后收到剧组拖欠款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688492.md#1">港姐吴文忻乳癌复发 癌细胞扩散至一重要器官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689115.md#1">为什么小狗需要尾巴？ 有何作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687871.md#1">日式护肤九步法 层层养护润至极处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/6/n14365676.htm">壮志未酬因公殉职 故警苏昱鸿获颁总统褒扬令</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365676.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
